--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,6 +8,6 @@ import levi from '../levi.png';
 <Layout title="Welcome to Astro." image={levi}>
 	<main>
 		<h1>Pass img from /src to open graph</h1>
-		<p>Inspect head element for opengraph image, should look something like '/_astro/levi.XXXXX.png'</p>
+		<p>Do 'astro build' then 'astro preview' and inspect head element for opengraph image, should look something like '/_astro/levi.XXXXX.png'</p>
 	</main>
 </Layout>
